--- a/src/components/HeroBanner.css
+++ b/src/components/HeroBanner.css
@@ -18,6 +18,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-color: var(--image-bg);
   position: relative;
   display: flex;
   align-items: center;
